--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -5,14 +5,10 @@
   margin-left: 0;
 }
 
-// .container {
-//   height: 500px;
-//   border: 1px solid black;
-// }
-
-// section {
-//   margin-top: 5%;
-// }
+.user-show {
+  margin-top: 5%;
+  height: 450px;
+}
 
 #profile_pic {
   border: 1px solid black;
